syntax = "proto3" ;

option go_package = "sdcc_project.org/balancer/protobuf" ;

message Edge {
    int64 startNode = 1 ;
    int64 endNode = 2 ;
    int64 weight = 3 ;
}

message Graph {
    repeated int64 nodes = 1 ;
    int64 startId = 2 ;
    int64 endId = 3 ;
    repeated Edge edges = 4 ;
}

message Path {
    repeated int64 nodeSequence = 1 ;
}

service ShortestPath {
    rpc SSSP(Graph) returns (Path) {}
}